# ds_assignments_property

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.web  README.md  demo.ipynb  docker-compose.yml  main.py  property  pyproject.toml  基于梯度提升回归模型与墨尔本房价数据的房产价格预测接口操作手册.pptx
config/: settings.toml  webconfig.js
notebooks/: demo.ipynb  report_figures.ipynb
src/: property_cli.py
src/database_ml/: cli.py  melb_price_model.py
src/property/: __init__.py  api.py  cli.py  config.py  database.py  features.py  melb_price_model.py
src/property/api/: __init__.py  __main__.py  app.py  services.py
src/property/api/routes/: auth.py  prediction.py
web/: app.js  config.js  index.html  styles.css
